NATTQA-ENV/force-app/main/default/objects/NATT_Product_Dealer_Type__c/NATT_Product_Dealer_Type__c.object-meta.xml
<CustomObject>
    <description>Used with NATT Dealers to show the dealer type per product</description>
    <label>Product Dealer Type</label>
    <nameField>
        <displayFormat>PDT-{000000}</displayFormat>
        <label>Product Dealer Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Dealer Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>