NATTQA-ENV/force-app/main/default/objects/NATT_Product_Dealer_Type__c/fields/NATT_Dealer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer__c</fullName>
    <description>For NATT Dealer Accounts to classify Dealers</description>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Dealer Types</relationshipLabel>
    <relationshipName>Product_Dealer_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>