NATTQA-ENV/force-app/main/default/objects/NATT_Product_Dealer_Type__c/fields/NATT_Dealer_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Type__c</fullName>
    <description>Classify the Dealer for NATT</description>
    <label>Dealer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Dealer</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Mobile Location</fullName>
            </value>
            <value>
                <fullName>Associate Location</fullName>
            </value>
            <value>
                <fullName>Parts &amp; Service Dealer</fullName>
            </value>
            <value>
                <fullName>Direct Sell</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>