NATTQA-ENV/force-app/main/default/objects/NATT_Product_Dealer_Type__c/fields/NATT_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Type__c</fullName>
    <description>NATT - to classify dealers</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Special Products</fullName>
            </value>
            <value>
                <fullName>Electric Trailer</fullName>
            </value>
            <value>
                <fullName>Electric Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>