NATTQA-ENV/force-app/main/default/objects/NATT_Product_Dealer_Type__c/recordTypes/NATT_Product_Dealer_Type.recordType-meta.xml
<RecordType>
    <fullName>NATT_Product_Dealer_Type</fullName>
    <active>true</active>
    <description>Used by NATT to classify dealers</description>
    <label>NATT Product Dealer Type</label>
</RecordType>